Update version pinnings for Plone 4.3.

--- a/versions.cfg
+++ b/versions.cfg
@@ -1,12 +1,17 @@
 [buildout]
 extends =
-    http://dist.plone.org/release/4.2.1/versions.cfg
+    http://dist.plone.org/release/4.3.3/versions.cfg
     http://kgs.4teamwork.ch/release/opengever/latest
 
 versions = versions
 
 
 [versions]
+# Needed for Plone 4.3
+collective.transmogrifier = 1.4
+ftw.pdfgenerator = 1.3.3
+collective.dexteritytextindexer = 2.0.1
+
 # development pinnings
 collective.recipe.omelette = 0.12
 ipdb = 0.4
